--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="adapter"
-            type="com.nuriulgen.marsapp.HomeRecyclerAdapter" />
+            type="com.nuriulgen.marsapp.presentation.adapter.HomeRecyclerAdapter" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,7 +16,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:background="#6A3BB4"
-        tools:context=".HomeActivity">
+        tools:context=".presentation.home.view.HomeActivity">
 
         <TextView
             android:id="@+id/textView2"
@@ -39,7 +39,7 @@
             android:id="@+id/recyclerView2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="70dp"
             android:layout_marginEnd="1dp"
             android:layout_marginBottom="1dp"
