--- a/app/src/main/res/layout/recycler_card.xml
+++ b/app/src/main/res/layout/recycler_card.xml
@@ -13,8 +13,8 @@
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="220dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center">
 
         <ImageView
@@ -33,10 +33,11 @@
             android:id="@+id/recyclerView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recycler_imageView1"
             app:layout_constraintVertical_bias="0.111"
             tools:ignore="ExtraText,MissingConstraints">
@@ -45,7 +46,7 @@
                 android:id="@+id/recycler_textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
                 android:text="TextView1"
                 app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +56,7 @@
                 android:id="@+id/recycler_textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
                 android:text="TextView2"
                 app:layout_constraintStart_toEndOf="@+id/recycler_textView1"
