--- a/app/src/main/res/layout/recycler_card.xml
+++ b/app/src/main/res/layout/recycler_card.xml
@@ -27,7 +27,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_launcher_background" />
+            app:srcCompat="@drawable/ic_launcher_background"
+            android:contentDescription="@string/image" />
 
         <LinearLayout
             android:id="@+id/recyclerView"
